cabal-version:   3.0
name:            hs-blog
version:         0.1.0.0
license:         GPL-2.0-only
description:     TODO: description
synopsis:        TODO: synopsis
license-file:    LICENSE
maintainer:      joshuarose@gmx.com
author:          Joshua Rose
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable hs-blog
    main-is:          Main.hs
    hs-source-dirs:   src-exe
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.17.2.1
