cabal-version:   3.0
name:            hs-blog
version:         0.1.0.0
license:         GPL-2.0-only
license-file:    LICENSE
maintainer:      joshuarose@gmx.com
author:          Joshua Rose
synopsis:        TODO: synopsis
description:     TODO: description
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/H4ppy-04/hs_blog.git

executable hs-blog
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:    base ^>=4.17.2.1
    other-modules:    Types,
                      Markdown
